# expo

./: .gitignore  .hmn  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
expense_tracker/: settings.py  urls.py
expenses/: adapters.py  admin.py  mixins.py  urls.py
expenses/forms/: __init__.py  expense_forms.py  group_forms.py  session_forms.py
expenses/migrations/: 0001_initial.py  0002_create_default_site.py  0002_session_expense_session_group_sessions.py  0003_alter_expense_session.py  0003_create_google_oauth.py  0004_alter_expense_options_alter_expense_date_and_more.py  0004_settlement.py  0005_session_description.py  0005_settlement_session_alter_settlement_unique_together.py  0006_group_description.py  0007_session_ended.py
expenses/models/: __init__.py  expense.py  group.py  session.py  settlement.py
expenses/services/: balance_calculator.py  expense_service.py
expenses/templatetags/: custom_filters.py
expenses/tests/: test_models.py  test_views.py
expenses/utils/: calculations.py  validators.py
expenses/views/: __init__.py  account_views.py  auth_views.py  expense_views.py  group_views.py  session_views.py  settlement_views.py
templates/: base.html
templates/account/: email_confirm.html  login.html  manage.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/expenses/: add_expense.html  create_group.html  create_session.html  dashboard.html  expense_detail.html  group_detail.html  session_detail.html  (+2 more)
(+2 files in other folders)
